# cursed-chess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  bordered_chessboard.hpp  chess_engine.cpp  chess_engine.hpp  chess_event_loop.cpp  chess_event_loop.hpp  chess_full_ui.cpp  chess_full_ui.hpp  chess_game_widget.hpp  chess_move_request_event.cpp  chess_move_request_event.hpp  chess_ui.cpp  chess_ui.hpp  chess_widget.cpp  chess_widget.hpp  chessboard_borders.cpp  chessboard_borders.hpp  chessboard_widget.cpp  chessboard_widget.hpp  figure.hpp  invalid_position.cpp  invalid_position.cpp.old  invalid_position.hpp  log.cpp  log.hpp  lower_pane.cpp  lower_pane.hpp  main.cpp  main.old.cpp  manager.hpp  move.cpp  move.hpp  move_input.cpp  move_input.hpp  no_rules.cpp  no_rules.hpp  piece.cpp  piece.hpp  piece_bishop.hpp  piece_king.hpp  (+29 more)
